--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "firebase": "^11.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
